--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title></title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root-widget-constructor"></div>
+    <script>
+    localStorage.shopId = '64413bed6c4374b15f95976e'
+</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
